--- a/2048/Base.lproj/Main.storyboard
+++ b/2048/Base.lproj/Main.storyboard
@@ -4,7 +4,6 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -16,36 +15,139 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="95f-wm-0f2">
-                                <rect key="frame" x="57" y="298" width="300" height="300"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Kd8-d4-yef">
+                                <rect key="frame" x="47" y="288" width="320" height="320"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NqX-P6-VSe">
+                                        <rect key="frame" x="5" y="5" width="100" height="100"/>
+                                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="100" id="06u-2S-alI"/>
+                                            <constraint firstAttribute="height" constant="100" id="Vrc-7Y-PIH"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gEa-8b-rNX">
+                                        <rect key="frame" x="110" y="5" width="100" height="100"/>
+                                        <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="100" id="4Vd-p9-vHF"/>
+                                            <constraint firstAttribute="height" constant="100" id="BnF-hc-3q4"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="He0-5G-qp0">
+                                        <rect key="frame" x="215" y="5" width="100" height="100"/>
+                                        <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="100" id="1UO-3O-5hR"/>
+                                            <constraint firstAttribute="width" constant="100" id="v1a-o4-kIF"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dEh-U6-9tM">
+                                        <rect key="frame" x="5" y="215" width="100" height="100"/>
+                                        <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="100" id="1av-vx-3Xo"/>
+                                            <constraint firstAttribute="width" constant="100" id="6jE-Xf-HFX"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SSc-5z-Mke">
+                                        <rect key="frame" x="110" y="215" width="100" height="100"/>
+                                        <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="100" id="Srj-rr-Iwl"/>
+                                            <constraint firstAttribute="width" constant="100" id="Sst-ur-ctw"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rp2-Sz-YPa">
+                                        <rect key="frame" x="215" y="215" width="100" height="100"/>
+                                        <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="100" id="3ti-uc-M0M"/>
+                                            <constraint firstAttribute="height" constant="100" id="7dL-ZN-9sk"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="edk-ee-iIp">
+                                        <rect key="frame" x="110" y="110" width="100" height="100"/>
+                                        <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="100" id="imL-Ji-p4C"/>
+                                            <constraint firstAttribute="height" constant="100" id="tFS-RD-he5"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aqi-xZ-Mo4">
+                                        <rect key="frame" x="215" y="110" width="100" height="100"/>
+                                        <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="100" id="aal-sy-rzQ"/>
+                                            <constraint firstAttribute="width" constant="100" id="k3t-HJ-5xH"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="300" id="29M-pJ-qwz"/>
-                                    <constraint firstAttribute="height" constant="300" id="ZfQ-yK-vvG"/>
+                                    <constraint firstAttribute="bottom" secondItem="SSc-5z-Mke" secondAttribute="bottom" constant="5" id="2OD-c0-bJ2"/>
+                                    <constraint firstItem="edk-ee-iIp" firstAttribute="top" secondItem="gEa-8b-rNX" secondAttribute="bottom" constant="5" id="5BA-zj-yXd"/>
+                                    <constraint firstAttribute="height" constant="320" id="CFd-ju-DdI"/>
+                                    <constraint firstItem="NqX-P6-VSe" firstAttribute="leading" secondItem="Kd8-d4-yef" secondAttribute="leading" constant="5" id="K1y-3M-ehH"/>
+                                    <constraint firstItem="He0-5G-qp0" firstAttribute="top" secondItem="Kd8-d4-yef" secondAttribute="top" constant="5" id="NL0-nx-Buw"/>
+                                    <constraint firstAttribute="bottom" secondItem="dEh-U6-9tM" secondAttribute="bottom" constant="5" id="QcT-6F-F1K"/>
+                                    <constraint firstAttribute="width" constant="320" id="RVt-az-9KW"/>
+                                    <constraint firstItem="dEh-U6-9tM" firstAttribute="leading" secondItem="Kd8-d4-yef" secondAttribute="leading" constant="5" id="VXC-Kx-8Rq"/>
+                                    <constraint firstAttribute="bottom" secondItem="rp2-Sz-YPa" secondAttribute="bottom" constant="5" id="aIf-zh-THj"/>
+                                    <constraint firstItem="edk-ee-iIp" firstAttribute="leading" secondItem="Kd8-d4-yef" secondAttribute="leading" constant="110" id="fhH-Pv-sNK"/>
+                                    <constraint firstItem="aqi-xZ-Mo4" firstAttribute="top" secondItem="He0-5G-qp0" secondAttribute="bottom" constant="5" id="pRw-R5-Pu8"/>
+                                    <constraint firstAttribute="trailing" secondItem="He0-5G-qp0" secondAttribute="trailing" constant="5" id="qtE-M6-2d0"/>
+                                    <constraint firstItem="gEa-8b-rNX" firstAttribute="leading" secondItem="NqX-P6-VSe" secondAttribute="trailing" constant="5" id="rtc-px-7mL"/>
+                                    <constraint firstItem="gEa-8b-rNX" firstAttribute="top" secondItem="Kd8-d4-yef" secondAttribute="top" constant="5" id="sax-NO-QQH"/>
+                                    <constraint firstItem="NqX-P6-VSe" firstAttribute="top" secondItem="Kd8-d4-yef" secondAttribute="top" constant="5" id="xY4-v1-ddM"/>
+                                    <constraint firstItem="SSc-5z-Mke" firstAttribute="leading" secondItem="dEh-U6-9tM" secondAttribute="trailing" constant="5" id="y9y-ZY-BPh"/>
+                                    <constraint firstAttribute="trailing" secondItem="rp2-Sz-YPa" secondAttribute="trailing" constant="5" id="yDr-g5-97T"/>
+                                    <constraint firstItem="aqi-xZ-Mo4" firstAttribute="leading" secondItem="edk-ee-iIp" secondAttribute="trailing" constant="5" id="zK6-21-IDd"/>
                                 </constraints>
-                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="h6q-JN-dnY">
-                                    <size key="itemSize" width="50" height="50"/>
-                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                </collectionViewFlowLayout>
-                                <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="lmW-bK-x93">
-                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="Hrd-Rk-Lcs">
-                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                        </collectionViewCellContentView>
-                                    </collectionViewCell>
-                                </cells>
-                            </collectionView>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="750-Wu-aDE">
+                                <rect key="frame" x="52" y="398" width="100" height="100"/>
+                                <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="L2G-wh-aoW"/>
+                                    <constraint firstAttribute="width" constant="100" id="Puu-gQ-wjR"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <gestureRecognizers/>
                         <constraints>
-                            <constraint firstItem="95f-wm-0f2" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="V7E-w3-A4e"/>
-                            <constraint firstItem="95f-wm-0f2" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="nrK-gE-HJH"/>
+                            <constraint firstItem="Kd8-d4-yef" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="B9c-pc-J3D"/>
+                            <constraint firstItem="Kd8-d4-yef" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="LOW-j6-5mP"/>
+                            <constraint firstItem="750-Wu-aDE" firstAttribute="leading" secondItem="Kd8-d4-yef" secondAttribute="leading" constant="5" id="Ou2-UH-112"/>
+                            <constraint firstItem="750-Wu-aDE" firstAttribute="top" secondItem="Kd8-d4-yef" secondAttribute="top" constant="110" id="i9U-zx-bE8"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <connections>
@@ -78,7 +180,7 @@
                     </connections>
                 </swipeGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="139" y="102"/>
+            <point key="canvasLocation" x="137.68115942028987" y="101.78571428571428"/>
         </scene>
     </scenes>
 </document>
